syntax = "proto3";
option csharp_namespace = "Sistema_de_reserva_bilhetes";
package greet;


service ListarSessao{
	rpc GetListarSessao (ListarSessaoVerModelo) returns (stream ListarSessaoModelo);
	rpc PesquisaListaSessao(PesquisaListaSessaoVerModelo) returns (ListarSessaoModelo);
	rpc GetSessao(GetSessaoRequest) returns (ListarSessaoModelo);
}

message GetSessaoRequest {
	int32 id = 1;
}

message PesquisaListaSessaoVerModelo{
	string sessao = 1;
}

message ListarSessaoVerModelo{

}

message ListarSessaoModelo{
	string nome_sessao = 1;
	string datasessao = 2;
	string horainicio = 3;
	string horafim = 4;
	int32 lugares_totais = 5;
	int32 lugares_disponiveis = 6;
	int32 id = 7;
	int32 teatro_id = 8;
	int32 espetaculo_id = 9;
}
