syntax = "proto3";
option csharp_namespace = "Sistema_de_reserva_bilhetes";
package greet;

service AdicionarEspetaculo {

	rpc GetNovoEspetaculo (EspetaculoVerModelo) returns (EspetaculoModelo);
	rpc PesquisaEspetaculo (EspetaculoVerModeloPesquisa) returns (EspetaculoModeloPesquisa);
	rpc GetEspetaculo(GetEspetaculoRequest) returns (GetEspetaculoResponse);
}

message EspetaculoVerModelo{
	string nome = 1;
	string sinopse = 2;
	string data_inicio = 3;
	string data_fim = 4;
	int32 dinheiro = 5;
	
}

message EspetaculoModelo{
	string feedback = 1;
}


message EspetaculoVerModeloPesquisa{
	string nome = 1;	
}

message EspetaculoModeloPesquisa{
	string nome = 1;
	string sinopse = 2;
	string data_inicio = 3;
	string data_fim = 4;
	float dinheiro = 5;
	
}

message GetEspetaculoRequest {
	int32 id = 1;
}

message GetEspetaculoResponse {
	string nome = 1;
	string sinopse = 2;
	string data_inicio = 3;
	string data_fim = 4;
	float dinheiro = 5;
	int32 id = 6;
}